# rosbot_autonomy_ros

./: .env  .gitignore  .pre-commit-config.yaml  README.md  justfile
.github/workflows/: build-docker.yaml  ci.yaml
docker/: .env  Dockerfile  compose.sim.yaml  compose.simulation.yaml  compose.yaml  dds-config-udp.xml
rosbot_navigation/: CMakeLists.txt  package.xml
rosbot_navigation/config/: nav2_dwb_params.yaml  nav2_mppi_params.yaml  nav2_rpp_params.yaml
rosbot_navigation/include/rosbot_navigation/: map_autosaver_node.hpp
rosbot_navigation/launch/: bringup.launch.py  navigation.launch.py  slam.launch.py
rosbot_navigation/layout/: foxglove.json
rosbot_navigation/src/: map_autosaver_main.cpp  map_autosaver_node.cpp
